# SHU-CXX-2024

./: .clang-format  .clangd  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
01-introduction-to-cxx/: CMakeLists.txt  Makefile  build.sh
01-introduction-to-cxx/doc/: IntroConcept.md
01-introduction-to-cxx/include/01-introduction-to-cxx/: IntroConcept.hpp
01-introduction-to-cxx/include/shucxx2024/: HelloWorld.hpp
01-introduction-to-cxx/scripts/: build.sh
01-introduction-to-cxx/src/: CMakeLists.txt  HelloWorld.cpp  IntroConceptTest.cpp  main.cpp
02-basic-cmake-example/: CMakeLists.txt
02-basic-cmake-example/include/02-basic-cmake-example/utils/: print.hpp
02-basic-cmake-example/src/: CMakeLists.txt  main.cpp
02-basic-cmake-example/src/math/: fabonacci.cpp
02-basic-cmake-example/src/utils/: print.cpp
03-build-and-link-against-libraries/: CMakeLists.txt
03-build-and-link-against-libraries/cmake/: 03-build-and-link-against-libraries-MathConfig.cmake.in
03-build-and-link-against-libraries/include/03-build-and-link-against-libraries/: Math.hpp  System.hpp  TimeCounter.hpp
03-build-and-link-against-libraries/include/shucxx2024/: Logger.hpp  Math.hpp  TimeCounter.hpp
03-build-and-link-against-libraries/src/: CMakeLists.txt  Logger.cpp  Math.cpp  TimeCounter.cpp
03-build-and-link-against-libraries/test/: CMakeLists.txt  main.cpp
04-concept-crtp/: CMakeLists.txt
04-concept-crtp/doc/: IntroConcept.html  IntroConcept.md
04-concept-crtp/include/04-concept-crtp/: IntroConcept.hpp
04-concept-crtp/src/: CMakeLists.txt  main.cpp
05-concept-crtp/: CMakeLists.txt
05-concept-crtp/include/shucxx2024/: IntroConcept.hpp
05-concept-crtp/src/: main.cpp
06-concept-crtp/: CMakeLists.txt
06-concept-crtp/include/shucxx2024/: IntroConcept.hpp
06-concept-crtp/src/: CMakeLists.txt
06-exception-safety/: CMakeLists.txt
06-exception-safety/asm/: test1-g++14.2.asm  test2-g++14.2.asm
06-exception-safety/include/shucxx2024/: defer_guard.hpp  exception-safe-vector.hpp  exception-unsafe-vector.hpp  helpers.hpp  utils.hpp
06-exception-safety/src/: CMakeLists.txt  main.cpp  test1.cc  test2.cc
07-openmp/: CMakeLists.txt
07-openmp/include/shucxx2024/math/: fabonacci.hpp
07-openmp/src/: CMakeLists.txt  main.cpp  openmp_for.cpp  openmp_loop_dependency.cpp  openmp_private.cpp  openmp_schedules.cpp  openmp_sections.cpp  openmp_shared.cpp  openmp_single.cpp  openmp_tongbu.cpp
cmake/: Compiler.cmake  Install.cmake  InstallLib.cmake  Logging.cmake
doc/: 01-env-setup.md  02-build-this-project.md
scripts/: build-all.sh  build-and-install-spdlog.sh  build-shu-cxx-2024.sh  install-externals.sh  install-spdlog.sh
